[package]
name = "rig-tool-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rig-core = "0.6.1"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = "0.3.19"
