[package]
name = "rig-tool-macro"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "rig-tool-macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rig-core = { git = "https://github.com/piotrostr/rig", branch = "fix/openai-id-missing" }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = "0.3.19"
